z-index menu correction
git-svn-id: svn://localhost/jahia/trunk@6945 69c369ed-ed09-0410-a4a1-e19a46c23626

--- a/templates/templates-intranet/src/main/webapp/css/navigationN1-1.css
+++ b/templates/templates-intranet/src/main/webapp/css/navigationN1-1.css
@@ -46,6 +46,7 @@ div#navigationN1-1 ul.level_1 li div.box-inner {
 	-khtml-border-radius-bottomleft: 5px;
 	-webkit-border-bottom-left-radius: 5px;
 	border-bottom-left-radius: 5px;
+	z-index:999;
 }
 div#navigationN1-1 ul.level_1 li:hover div.box-inner { display: block; }
 div#navigationN1-1 ul.level_1 li div.box-inner a { display: inline; }
